made a few changes

--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
           <h2>About Me</h2>
           <!-- <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p> -->
 
-          <p style="text-align: center; width:800px; margin: 0 auto;"> "Nobody ever figures out what life is all about, and it doesn’t matter.
-            Explore the world. Nearly everything is really interesting if you go into it deeply enough."
-            -- Richard P. Feynman
+          <p style="text-align: center; width:800px; margin: 0 auto;"> "Everyone's time is limited. What matters most is to focus on what matters most."
+            -- Roy T. Bennett
           </p>
 
         </div>
@@ -105,10 +104,10 @@
           <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-lg-8 d-flex flex-column align-items-stretch">
             <div class="content ps-lg-4 d-flex flex-column justify-content-center">
-              <div class="row m-1">
+              <div class="row mx-1 my-2">
                 <p id="intro">
                   I'm currently an experimental physics postdoc from University of South Carolina,
-                  and I'm seeking data scientist positions within United Stats right now. I have strong skills
+                  and I'm seeking data scientist positions within United States right now. I have strong skills
                   at data analysis with more than six years experience. I have applied many deep learning
                   techniques into my projects, including ANN, CNN, RNN.
                   Besides, I'm familiar with a couple of
@@ -127,7 +126,7 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Postion:</strong> <span>High Energy Physics Postdoc</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+1)803 665 5452</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span> bingguo0625@gmail.com</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href = "mailto: bingguo0625@gmail.com"> <span> bingguo0625@gmail.com</span></a></li>
                   </ul>
                 </div>
                 <div class="col-lg-12">
@@ -483,6 +482,11 @@ the words and trained with Naive Bayes and obtained high accuracy with test data
     <div class="container">
       <h3>Bing Guo</h3>
       <!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
+      <p> "Nobody ever figures out what life is all about, and it doesn’t matter.
+        Explore the world. Nearly everything is really interesting if you go into it deeply enough."
+        -- Richard P. Feynman
+      </p>
+      <p></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://github.com/bingguo1" class="github"><i class="bx bxl-github"></i></a>
