made tiny change

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <h2>About Me</h2>
           <!-- <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p> -->
 
-          <p style="text-align: center; width:800px; margin: 0 auto;"> "Everyone's time is limited. What matters most is to focus on what matters most."
+          <p> "Everyone's time is limited. What matters most is to focus on what matters most."
             -- Roy T. Bennett
           </p>
 
